kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tc2-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tc2-app

  template:
    metadata:
      labels:
        app: tc2-app

    spec:
      containers:
        - name: tc2-app
          image: 377730029945.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-2-app:latest

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
