kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tc2-app-service

spec:
  type: LoadBalancer

  selector:
    app: tc2-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
